--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 # rdatasets
 
 <!-- badges: start -->
-[![R CMD Check via {tic}](https://github.com/jolars/rdatasets/workflows/R%20CMD%20Check%20via%20{tic}/badge.svg?branch=master)](https://github.com/jolars/rdatasets/actions)
+[![R build status](https://github.com/jolars/rdatasets/workflows/R-CMD-check/badge.svg)](https://github.com/jolars/rdatasets/actions)
 <!-- badges: end -->
 
 A range of datasets for use in R.
